fix: header z-index

--- a/src/components/Header.module.less
+++ b/src/components/Header.module.less
@@ -27,6 +27,7 @@
     display: flex;
     margin-top: 50px;
     margin-right: 113px;
+    z-index: 1;
     .navItem {
       margin-right: 20px;
       list-style: none;
